airflow/logs/dag_id=etl_hh/run_id=manual__2023-11-18T161620.981513+0000/task_id=load_staging_layer/attempt=1.log
[2023-11-18 16:16:22,665] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: etl_hh.load_staging_layer manual__2023-11-18T16:16:20.981513+00:00 [queued]>
[2023-11-18 16:16:22,689] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: etl_hh.load_staging_layer manual__2023-11-18T16:16:20.981513+00:00 [queued]>
[2023-11-18 16:16:22,689] {taskinstance.py:1376} INFO - 
--------------------------------------------------------------------------------
[2023-11-18 16:16:22,690] {taskinstance.py:1377} INFO - Starting attempt 1 of 2
[2023-11-18 16:16:22,691] {taskinstance.py:1378} INFO - 
--------------------------------------------------------------------------------
[2023-11-18 16:16:22,719] {taskinstance.py:1397} INFO - Executing <Task(PythonOperator): load_staging_layer> on 2023-11-18 16:16:20.981513+00:00
[2023-11-18 16:16:22,725] {standard_task_runner.py:52} INFO - Started process 7481 to run task
[2023-11-18 16:16:22,729] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'etl_hh', 'load_staging_layer', 'manual__2023-11-18T16:16:20.981513+00:00', '--job-id', '89', '--raw', '--subdir', 'DAGS_FOLDER/pipeline.py', '--cfg-path', '/tmp/tmpyu666v7e', '--error-file', '/tmp/tmp3_9in7js']
[2023-11-18 16:16:22,729] {standard_task_runner.py:80} INFO - Job 89: Subtask load_staging_layer
[2023-11-18 16:16:22,833] {task_command.py:371} INFO - Running <TaskInstance: etl_hh.load_staging_layer manual__2023-11-18T16:16:20.981513+00:00 [running]> on host 2e176173f0f7
[2023-11-18 16:16:22,969] {taskinstance.py:1591} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=etl_hh
AIRFLOW_CTX_TASK_ID=load_staging_layer
AIRFLOW_CTX_EXECUTION_DATE=2023-11-18T16:16:20.981513+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-11-18T16:16:20.981513+00:00
[2023-11-18 16:16:32,110] {taskinstance.py:1909} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 171, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 189, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/pipeline.py", line 152, in load_data
    cursor.execute(sql, row)
psycopg2.errors.SyntaxError: syntax error at or near "bool"
LINE 17:         is_gross bool
                          ^

[2023-11-18 16:16:32,127] {taskinstance.py:1420} INFO - Marking task as UP_FOR_RETRY. dag_id=etl_hh, task_id=load_staging_layer, execution_date=20231118T161620, start_date=20231118T161622, end_date=20231118T161632
[2023-11-18 16:16:32,146] {standard_task_runner.py:97} ERROR - Failed to execute job 89 for task load_staging_layer (syntax error at or near "bool"
LINE 17:         is_gross bool
                          ^
; 7481)
[2023-11-18 16:16:32,169] {local_task_job.py:156} INFO - Task exited with return code 1
[2023-11-18 16:16:32,222] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
